--- a/eleve.html
+++ b/eleve.html
@@ -1,147 +1,152 @@
 <!DOCTYPE html>
 <html lang="fr"><head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-<link rel="stylesheet" href="assets/styles.css?v=7">
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+<link rel="stylesheet" href="assets/styles.css?v=8">
 <title>Élève • Chrono Vitesse EPS</title>
 </head>
 <body onload="baseInit()">
 <div class="container">
   <div class="header">
-    <div class="brand"><img src="assets/icons/logo.svg" alt="logo">Espace élève</div>
+    <div class="brand"><img src="assets/icons/logo.svg" alt="">Élève</div>
     <div class="nav">
+      <a href="index.html">Accueil</a>
+      <a href="aide.html">Aide</a>
       <button onclick="toggleXL()">Taille XL</button>
-      <button onclick="toggleDark()">Mode sombre</button>
     </div>
   </div>
 
   <div class="card">
     <h2>Identité</h2>
-    <div class="controls" role="group" aria-label="Identité">
-      <label for="nom">Nom</label><input id="nom" placeholder="Nom" autocomplete="family-name">
-      <label for="prenom">Prénom</label><input id="prenom" placeholder="Prénom" autocomplete="given-name">
-      <label for="classe">Classe</label><input id="classe" placeholder="2A, 3C...">
-      <label for="sexe">Sexe</label>
+    <div class="controls">
+      <label>Nom</label><input id="nom" placeholder="Nom">
+      <label>Prénom</label><input id="prenom" placeholder="Prénom">
+      <label>Classe</label><input id="classe" placeholder="2A, 3C...">
+      <label>Sexe</label>
       <select id="sexe"><option value="">choisir</option><option value="F">fille</option><option value="M">garcon</option><option value="X">autre</option></select>
     </div>
   </div>
 
   <div class="card">
     <h2>Réglages</h2>
-    <div class="controls" role="group" aria-label="Paramètres de test">
-      <label for="tourMeters">Longueur du tour (m)</label>
-      <input id="tourMeters" type="number" min="10" step="1" inputmode="numeric" placeholder="ex: 200">
+    <div class="controls">
+      <label>Mode</label>
+      <select id="mode"><option value="chrono">Chrono</option><option value="minuteur">Minuteur</option></select>
+      <label>Longueur du tour (m)</label><input id="tour" type="number" min="10" step="1" value="200">
       <button class="ghost" data-preset="100">100</button>
       <button class="ghost" data-preset="200">200</button>
       <button class="ghost" data-preset="250">250</button>
       <button class="ghost" data-preset="400">400</button>
-      <label style="margin-left:12px" for="targetVMA">Cible VMA (km/h)</label>
-      <input id="targetVMA" type="number" min="1" step="0.1" inputmode="decimal" placeholder="ex: 12.5">
-      <label style="margin-left:12px" for="thr2">Seuils (%, vert/orange)</label>
-      <input id="thr2" type="number" min="0.5" step="0.5" inputmode="decimal" value="2">
-      <input id="thr5" type="number" min="1" step="0.5" inputmode="decimal" value="5">
+      <label style="margin-left:12px">Cible VMA (km/h)</label><input id="targetVMA" type="number" min="1" step="0.1" placeholder="ex: 12.5">
+      <label style="margin-left:12px">Seuils (%, vert/orange)</label><input id="thr2" type="number" min="0.5" step="0.5" value="2"><input id="thr5" type="number" min="1" step="0.5" value="5">
+      <label style="margin-left:12px">Minuteur (min)</label><input id="minutes" type="number" min="0" step="1" value="6">
     </div>
   </div>
 
   <div class="card">
     <h2>Test</h2>
-    <div class="controls" role="group" aria-label="Options appareil">
-      <button class="ghost" id="toggleBeep" aria-pressed="false">Bip</button>
-      <button class="ghost" id="toggleVib" aria-pressed="false">Vibration</button>
+    <div class="controls">
+      <button class="ghost" id="toggleBeep">Bip</button>
+      <button class="ghost" id="toggleVib">Vibration</button>
       <button class="ghost" id="toggleFS">Plein écran</button>
       <button class="ghost" id="toggleWake">Anti-veille</button>
     </div>
 
-    <div class="timer zone" id="timerZone">
-      <div class="timer-screen" id="screen" aria-live="polite">00:00</div>
-      <div class="timer-sub" id="screenSub">millisecondes masquées</div>
-      <div class="timer-bar" aria-hidden="true"><div id="barFill"></div></div>
-
+    <div class="timer zone" id="zone">
+      <div class="timer-screen" id="screen">00:00</div>
+      <div class="timer-sub" id="sub">millisecondes masquées</div>
+      <div class="timer-bar"><div id="bar"></div></div>
       <div class="timer-actions">
         <button class="btn-start" id="btnStart">Démarrer</button>
         <button class="btn-lap" id="btnLap" disabled>Intermédiaire</button>
         <button class="btn-stop" id="btnStop" disabled>Stop</button>
         <button class="btn-reset" id="btnReset" disabled>Réinitialiser</button>
         <button class="ghost" id="btnShowMs">Voir ms (fin)</button>
-        <button class="ghost" id="btnTest6">Test 6'</button>
-        <button class="ghost" id="btnTest12">Test 12'</button>
+        <button class="ghost" id="btn6">Test 6'</button>
+        <button class="ghost" id="btn12">Test 12'</button>
       </div>
-
-      <div class="timer-sub" id="liveVMA" aria-live="polite">Vitesse: — • VMA: — • Dist: 0 m</div>
-
-      <table class="table" id="splitTable">
-        <thead><tr><th>#</th><th>Passage</th><th>Temps au passage</th><th>Temps cumulé</th><th>Total</th></tr></thead>
-        <tbody></tbody>
-      </table>
+      <div class="timer-sub" id="live">Vitesse: — • VMA: — • Dist: 0 m</div>
+      <table class="table" id="splits"><thead><tr><th>#</th><th>Passage</th><th>Temps au passage</th><th>Temps cumulé</th><th>Total</th></tr></thead><tbody></tbody></table>
     </div>
   </div>
 
   <div class="card">
     <h2>Exporter</h2>
     <div class="controls">
-      <button class="primary" id="btnCSV">Enregistrer CSV</button>
+      <button class="primary" id="saveCSV">Enregistrer CSV</button>
+      <button class="ghost" id="showQR">QR (compat.)</button>
     </div>
+    <div id="qrcode" style="display:flex;justify-content:center;margin-top:8px;"></div>
   </div>
 
-  <div class="footer">© EPS • Design PRO v7</div>
+  <div class="footer">© EPS • PRO v8</div>
 </div>
-
-<script src="assets/app.js?v=7"></script>
+<script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
+<script src="assets/app.js?v=8"></script>
 <script>
-// Persist champs
-(function(){['tourMeters','targetVMA','thr2','thr5','nom','prenom','classe','sexe'].forEach(id=>{const el=document.getElementById(id);const v=localStorage.getItem('f_'+id);if(v!==null)el.value=v;el.addEventListener('input',()=>localStorage.setItem('f_'+id,el.value));});})();
+// Persist
+['nom','prenom','classe','sexe','tour','targetVMA','thr2','thr5','mode','minutes'].forEach(id=>{ const el=document.getElementById(id); const v=localStorage.getItem('f_'+id); if(v!==null) el.value=v; el.addEventListener('input',()=>localStorage.setItem('f_'+id, el.value)); });
+document.querySelectorAll('[data-preset]').forEach(b=> b.onclick=()=>{ tour.value=b.getAttribute('data-preset'); });
+
 // Device
-let wl=null; toggleBeep.onclick=()=>{useBeep=!useBeep;toggleBeep.setAttribute('aria-pressed',useBeep)};
-toggleVib.onclick=()=>{useVib=!useVib;toggleVib.setAttribute('aria-pressed',useVib)};
+let wl=null; toggleBeep.onclick=()=>useBeep=!useBeep; toggleVib.onclick=()=>useVib=!useVib;
 toggleFS.onclick=()=>{ if(!document.fullscreenElement){ document.documentElement.requestFullscreen?.(); } else { document.exitFullscreen?.(); } };
 toggleWake.onclick=async()=>{ try{ wl = wl || (navigator.wakeLock && await navigator.wakeLock.request('screen')); }catch(e){ alert("Anti-veille non supporté"); } };
 
 // Timer
-const timer=new DigitalTimer({screen:screen, sub:screenSub, bar:barFill});
+const timer=new DigitalTimer({screen:screen, sub:sub, bar:bar});
+function setTargetByMode(){ if(mode.value==='minuteur'){ timer.setTargetMinutes(Math.max(0,+minutes.value||0)); } else { timer.setTargetMinutes(null); } }
+setTargetByMode(); mode.onchange=setTargetByMode; minutes.oninput=setTargetByMode;
+
 btnStart.onclick=()=>{timer.start(); btnLap.disabled=false; btnStop.disabled=false; btnReset.disabled=false;};
-btnLap.onclick=()=>{ timer.lap(); vibrate(60); beep(); };
+btnLap.onclick=()=>{ timer.lap(); if(useVib && navigator.vibrate) navigator.vibrate(60); beep(); };
 btnStop.onclick=()=>timer.stop();
-btnReset.onclick=()=>{timer.reset(); document.querySelector('#splitTable tbody').innerHTML=''; liveVMA.textContent='Vitesse: — • VMA: — • Dist: 0 m'; nextLabelMeters = getTour(); setZone(null);};
-btnShowMs.onclick=()=>{screenSub.textContent='Total (centièmes) : '+timer.fmt(timer.getTotal(),true);};
-btnTest6.onclick=()=>timer.setTargetMinutes(6); btnTest12.onclick=()=>timer.setTargetMinutes(12);
+btnReset.onclick=()=>{ timer.reset(); document.querySelector('#splits tbody').innerHTML=''; live.textContent='Vitesse: — • VMA: — • Dist: 0 m'; nextLabel=+tour.value||200; setZone(null); };
+btnShowMs.onclick=()=>{ sub.textContent='Total (centièmes) : '+timer.fmt(timer.getTotal(),true); };
+btn6.onclick=()=>{ mode.value='minuteur'; minutes.value=6; setTargetByMode(); };
+btn12.onclick=()=>{ mode.value='minuteur'; minutes.value=12; setTargetByMode(); };
 
-function getTour(){ const v = parseInt((tourMeters.value||'').trim()||'200',10); return Math.max(10,v); }
-document.querySelectorAll('[data-preset]').forEach(b=> b.onclick=()=>{ tourMeters.value=b.getAttribute('data-preset'); nextLabelMeters = getTour(); });
+function setZone(color){ zone.classList.remove('green','orange','red'); if(color) zone.classList.add(color); }
+function getTour(){ return Math.max(10, parseInt(tour.value||'200',10)); }
+function getTarget(){ const t=parseFloat(targetVMA.value||''); return isFinite(t)&&t>0? t:null; }
+function getThr(){ const t2=parseFloat(thr2.value||'2'), t5=parseFloat(thr5.value||'5'); return {t2:Math.max(0.5,t2)/100, t5:Math.max(1,t5)/100}; }
 
-function getTargetVMA(){ const t = parseFloat(targetVMA.value||'0'); return t>0 ? t : null; }
-function getThr(){ const t2= parseFloat(thr2.value||'2'); const t5= parseFloat(thr5.value||'5'); return {t2:Math.max(0.5,t2)/100, t5:Math.max(1,t5)/100}; }
-function setZone(color){ const box = document.getElementById('timerZone'); box.classList.remove('green','orange','red'); if(!color) return; box.classList.add(color); }
-
-let nextLabelMeters = getTour();
-const tbody=document.querySelector('#splitTable tbody');
-function addRow(row){const tr=document.createElement('tr'); const label=`${nextLabelMeters} m`; nextLabelMeters+=getTour();
-  tr.innerHTML=`<td>${row.idx}</td><td>${label}</td><td>${timer.fmt(row.lapMs,false)}</td><td>${timer.fmt(row.cumMs,false)}</td><td class="total-cell">—</td>`; tbody.appendChild(tr);}
-Bus.on('timer:lap',row=>{addRow(row); updateLive();});
-Bus.on('timer:stop',info=>{[...tbody.querySelectorAll('.total-cell')].forEach(td=>td.textContent=timer.fmt(info.totalMs,false)); updateLive(true);});
+let nextLabel=getTour();
+const tbody=document.querySelector('#splits tbody');
+function fmt(ms){return timer.fmt(ms,false);}
+document.addEventListener('timer:lap', e=>{ const row=e.detail; const tr=document.createElement('tr'); const label=`${nextLabel} m`; nextLabel+=getTour(); tr.innerHTML=`<td>${row.idx}</td><td>${label}</td><td>${fmt(row.lapMs)}</td><td>${fmt(row.cumMs)}</td><td class="t">—</td>`; tbody.appendChild(tr); updateLive();});
+document.addEventListener('timer:stop', e=>{ [...tbody.querySelectorAll('.t')].forEach(td=>td.textContent=fmt(e.detail.totalMs)); updateLive(true);});
 
 function updateLive(final=false){
   const splits=timer.getSplits(); const dist=splits.length*getTour(); const sec=timer.getTotal()/1000;
   const vInst=splits.length?(getTour()/(splits[splits.length-1].lapMs/1000))*3.6:0;
   const vma=sec>0?(dist/sec)*3.6:0;
-  liveVMA.textContent=`Vitesse: ${vInst.toFixed(2)} km/h • VMA: ${vma.toFixed(2)} km/h • Dist: ${dist} m`+(final?` • Total VMA: ${vma.toFixed(2)} km/h`:'' );
-  const tgt = getTargetVMA(); if(tgt){ const {t2,t5}=getThr(); const dev = Math.abs(vInst - tgt) / tgt; setZone(dev<=t2 ? 'green' : (dev<=t5 ? 'orange' : 'red')); }
+  live.textContent=`Vitesse: ${vInst.toFixed(2)} km/h • VMA: ${vma.toFixed(2)} km/h • Dist: ${dist} m` + (final?` • Total VMA: ${vma.toFixed(2)} km/h`:'');
+  const tgt=getTarget(); if(tgt){ const {t2,t5}=getThr(); const dev=Math.abs(vInst - tgt)/tgt; setZone(dev<=t2 ? 'green' : (dev<=t5 ? 'orange' : 'red')); }
   requestAnimationFrame(()=>updateLive(false));
 }
 updateLive();
 
-// CSV
-btnCSV.onclick=()=>{
+// Export CSV
+saveCSV.onclick=()=>{
   const n=nom.value.trim(), p=prenom.value.trim(), c=classe.value.trim(), s=sexe.value;
-  const splits=timer.getSplits(); const tour=getTour(); const total=timer.getTotal();
-  const dist=splits.length*tour; const vma=total>0?(dist/(total/1000))*3.6:0; const thr=getThr();
-  const headers=['nom','prenom','classe','sexe','vma','tour_m','target_vma','thr2','thr5','split_idx','split_lap','split_cum','total'];
-  const rows=[];
-  if(splits.length){
-    splits.forEach((sp,i)=>rows.push([n,p,c,s,vma.toFixed(2),tour,(getTargetVMA()||''),thr.t2*100,thr.t5*100,i+1,timer.fmt(sp.lapMs,true),timer.fmt(sp.cumMs,true),timer.fmt(total,true)]));
-  }else{
-    rows.push([n,p,c,s,vma.toFixed(2),tour,(getTargetVMA()||''),thr.t2*100,thr.t5*100,'','','',timer.fmt(total,true)]);
-  }
-  download(`vma_${p||'eleve'}_${n||''}.csv`, [headers.join(','), ...rows.map(r=>r.join(','))].join('\n'), 'text/csv;charset=utf-8');
+  const tourM=getTour(); const splits=timer.getSplits(); const total=timer.getTotal(); const dist=splits.length*tourM; const vma=total>0?(dist/(total/1000))*3.6:0;
+  const headers=['nom','prenom','classe','sexe','mode','tour_m','target_vma','thr2','thr5','split_idx','split_lap','split_cum','total','vma_calc'];
+  const rows=[]; const thr=getThr();
+  if(splits.length){ splits.forEach((sp,i)=>rows.push([n,p,c,s,mode.value,tourM,(getTarget()||''),thr.t2*100,thr.t5*100,i+1,timer.fmt(sp.lapMs,true),timer.fmt(sp.cumMs,true),timer.fmt(total,true),vma.toFixed(2)])); }
+  else{ rows.push([n,p,c,s,mode.value,tourM,(getTarget()||''),thr.t2*100,thr.t5*100,'','','',timer.fmt(total,true),vma.toFixed(2)]); }
+  download(`eleve_${p||'eleve'}_${n||''}.csv`, [headers.join(','), ...rows.map(r=>r.join(','))].join('\n'), 'text/csv;charset=utf-8');
 };
+
+// QR compatible (clé doublée + champs standards)
+function scanprofPayload(){
+  const n=nom.value.trim(), p=prenom.value.trim(), c=classe.value.trim(), s=sexe.value;
+  const splits=timer.getSplits(); const tourM=getTour(); const total=timer.getTotal(); const dist=splits.length*tourM; const vma=total>0?(dist/(total/1000))*3.6:0;
+  return {
+    nom:n, prenom:p, classe:c, sexe:s, vma:+vma.toFixed(2),
+    Nom:n, Prénom:p, Classe:c, Sexe:s, VMA:+vma.toFixed(2),
+    mode:mode.value, tour_m:tourM, date:new Date().toISOString().slice(0,10)
+  };
+}
+showQR.onclick=()=>{ const data=JSON.stringify(scanprofPayload()); qrcode.innerHTML=''; new QRCode(qrcode,{text:data,width:200,height:200}); };
 </script>
 </body></html>
