--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="fr"><head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-<link rel="stylesheet" href="assets/styles.css?v=7">
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+<link rel="stylesheet" href="assets/styles.css?v=8">
 <title>Chrono Vitesse EPS</title>
 </head>
 <body onload="baseInit()">
 <div class="container">
   <div class="header">
-    <div class="brand"><img src="assets/icons/logo.svg" alt="logo">Chrono Vitesse • EPS</div>
+    <div class="brand"><img src="assets/icons/logo.svg" alt="">Chrono Vitesse • EPS</div>
     <div class="nav">
+      <a href="aide.html">Aide</a>
       <button onclick="toggleXL()">Taille XL</button>
-      <button onclick="toggleDark()">Mode sombre</button>
     </div>
   </div>
 
   <div class="card">
-    <h2>Démarrer</h2>
+    <h2>Bienvenue</h2>
+    <p>Choisissez un espace :</p>
     <div class="controls">
-      <a class="primary" href="eleve.html">Espace élève</a>
-      <a class="ghost" href="projection.html">Projection (prof)</a>
+      <a class="primary" href="eleve.html">Espace Élève</a>
+      <a class="ghost" href="prof.html">Espace Prof</a>
     </div>
   </div>
 
   <div class="card">
-    <h2>Conseil d'usage</h2>
-    <p>Sur iPad / projecteur : active <b>Taille XL</b>, puis utilise <b>Plein écran</b> et <b>Anti‑veille</b> depuis la page.</p>
+    <h2>À propos</h2>
+    <p>Application EPS pour tests de course : chrono, minuteur, VMA (6’/12’), projection gymnase, exports CSV et QR pour intégration.</p>
   </div>
 
-  <div class="footer">© EPS • Design PRO v7</div>
+  <div class="footer">© EPS • Version PRO v8</div>
 </div>
-<script src="assets/app.js?v=7"></script>
+<script src="assets/app.js?v=8"></script>
 </body></html>
