--- a/mode.html
+++ b/mode.html
@@ -1,4 +1,3 @@
-<!-- mode.html — RunMeasure (REMPLACEMENT COMPLET) -->
 <!doctype html>
 <html lang="fr">
 <head>
@@ -35,7 +34,7 @@
       </nav>
     </header>
 
-    <!-- Bloc paramètres spécifiques au mode -->
+    <!-- Paramètres -->
     <section id="params" class="card">
       <h2>Paramètres</h2>
       <div class="row" id="distance-row" style="display:none">
@@ -99,15 +98,21 @@
     </footer>
   </div>
 
-  <!-- Librairie QR, puis modes.js (ordre important) -->
+  <!-- IMPORTANT : qrcode AVANT modes.js -->
   <script defer src="qrcode.min.js"></script>
   <script defer src="modes.js"></script>
 
-  <!-- Script local : logique des boutons & affichage par mode -->
+  <!-- Logique des boutons & affichage par mode -->
   <script>
   (function() {
     const qs = new URLSearchParams(location.search);
-    const mode = (qs.get('mode') || '').toLowerCase();
+    let mode = (qs.get('mode') || '').toLowerCase();
+    // Alias acceptés
+    const alias = {
+      'intervalles': 'intermediaire',
+      'demi-cooper': 'demi_cooper'
+    };
+    mode = alias[mode] || mode;
 
     // Elements
     const title = document.getElementById('mode-title');
@@ -136,7 +141,7 @@
     // Horloge
     let t0 = 0, raf = 0, running = false;
     let countdown = false, targetMs = 0; // minuteur
-    let elapsed = 0; // ms cumulés (pour stop/restart correct)
+    let elapsed = 0; // ms cumulés
     let fixedDurationMs = 0; // demi_cooper/cooper
     let splits = [];
 
@@ -149,7 +154,6 @@
       return h>0 ? `${h}:${pad(m)}:${pad(s)}` : `${m}:${pad(s)}`;
     }
     function parseTimeInput(v){
-      // "MM:SS" ou "HH:MM:SS"
       if (!v) return 0;
       const p = v.split(':').map(x => Number(x));
       if (p.length === 2) { return (p[0]*60 + p[1]) * 1000; }
@@ -192,9 +196,7 @@
         if (d) {
           const baseMs = countdown ? (targetMs - Math.max(0, targetMs - elapsed)) : elapsed;
           const v = computeSpeedKmh(d, baseMs);
-          if (v) {
-            speedResult.textContent = v + " km/h";
-          }
+          if (v) speedResult.textContent = v + " km/h";
         }
       }
     }
@@ -230,7 +232,6 @@
       resetBtn.disabled = true;
       startBtn.disabled = false;
 
-      // Pour minuteur : recharger la cible
       if (mode === 'minuteur') {
         targetMs = parseTimeInput(timeInput.value || "06:00");
         timeResult.textContent = msToClock(targetMs);
@@ -255,11 +256,7 @@
 
     function updateDistanceOutput(){
       const d = readDistance();
-      if (d) {
-        distanceResult.textContent = d + " m";
-      } else {
-        distanceResult.textContent = "—";
-      }
+      distanceResult.textContent = d ? (d + " m") : "—";
     }
 
     // Config par mode
@@ -267,11 +264,6 @@
       case 'chrono':
         title.textContent = 'Chrono';
         hint.textContent = 'Démarre/Stop. Utilise Reset pour remettre à zéro.';
-        countdown = false;
-        rowDistance.style.display = 'none';
-        distanceCol.style.display = 'none';
-        speedCol.style.display = 'none';
-        splitBtn.style.display = 'none';
         break;
 
       case 'minuteur':
@@ -281,7 +273,6 @@
         countdown = true;
         targetMs = parseTimeInput(timeInput.value || "06:00");
         timeResult.textContent = msToClock(targetMs);
-        splitBtn.style.display = 'none';
         break;
 
       case 'chrono_vitesse':
@@ -290,7 +281,6 @@
         rowDistance.style.display = 'block';
         distanceCol.style.display = 'block';
         speedCol.style.display = 'block';
-        splitBtn.style.display = 'none';
         distanceInput.addEventListener('input', updateDistanceOutput);
         break;
 
@@ -310,8 +300,8 @@
       case 'intermediaire':
         title.textContent = 'Temps intermédiaire';
         hint.textContent = 'Utilise Démarrer, puis “Temps intermédiaire” pour enregistrer les splits.';
-        splitBtn.style.display = 'inline-block';
-        splitsBlock.style.display = 'block';
+        document.getElementById('split-btn').style.display = 'inline-block';
+        document.getElementById('splits-block').style.display = 'block';
         break;
 
       case 'demi_cooper':
@@ -355,7 +345,6 @@
     resetBtn.addEventListener('click', reset);
     splitBtn.addEventListener('click', addSplit);
 
-    // Init distance affichée au chargement (si pré-remplie)
     updateDistanceOutput();
   })();
   </script>
