--- a/options.html
+++ b/options.html
@@ -1,51 +1,129 @@
-<!DOCTYPE html>
-<html lang="fr"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/><title>RunMeasure • Élève & Modes</title>
-<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet"><link rel="stylesheet" href="style.css"/>
-<script>
-const saveStudent=()=>{const nom=document.getElementById('nom').value.trim();const prenom=document.getElementById('prenom').value.trim();const classe=document.getElementById('classe').value.trim();const sexe=document.getElementById('sexe').value;localStorage.setItem('rm_student',JSON.stringify({nom,prenom,classe,sexe}));};
-const go=(mode)=>{saveStudent();location.href='mode.html?mode='+encodeURIComponent(mode);};
-window.addEventListener('DOMContentLoaded',()=>{try{const s=JSON.parse(localStorage.getItem('rm_student')||'{}');['nom','prenom','classe','sexe'].forEach(k=>{if(s[k]) document.getElementById(k).value=s[k];});}catch(e){};});
-</script>
+<!doctype html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>RunMeasure • Options</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    .wrap { max-width: 900px; margin: 0 auto; padding: 16px; }
+    header, footer { text-align: center; margin: 8px 0; }
+    .card { border: 1px solid #ddd; border-radius: 12px; padding: 12px; background: #fff; margin-bottom: 12px; }
+    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 12px; }
+    .btn { display:inline-block; padding:10px 14px; border-radius:10px; border:1px solid #ccc; background:#f5f5f5; font-weight:600; text-decoration:none; text-align:center; cursor:pointer; }
+    .btn-primary { background:#eaf3ff; border-color:#bcd4ff; }
+    .btn-wide { width:100%; }
+    label { display:block; margin:6px 0 3px; font-weight:600; }
+    input[type="text"], select { width:100%; padding:8px; border:1px solid #ccc; border-radius:8px; }
+    .row { display:flex; gap:8px; }
+    .row > div { flex:1; }
+    .muted { color:#666; font-size: 0.95rem; }
+  </style>
 </head>
 <body>
-<header class="topbar colorful"><h1>RunMeasure</h1></header>
-<main class="container">
-  <div class="nav-row"><a href="index.html" class="btn btn-outline">&larr; Accueil</a><a href="aide.html" class="btn btn-outline">Aide</a></div>
+  <div class="wrap">
+    <header>
+      <h1>RunMeasure</h1>
+      <nav>
+        <a href="index.html">← Accueil</a> · <a href="aide.html">Aide</a>
+      </nav>
+    </header>
 
-  <section class="card panel hc-blue centered">
-    <h2>Informations élève</h2>
-    <form class="grid-2">
-      <label>Nom<input type="text" id="nom" required/></label>
-      <label>Prénom<input type="text" id="prenom" required/></label>
-      <label>Classe<input type="text" id="classe" required/></label>
-      <label>Sexe
-        <select id="sexe" required>
-          <option value="" disabled selected>—</option>
-          <option value="F">Fille</option><option value="M">Garçon</option><option value="Autre">Autre</option>
-        </select>
-      </label>
-    </form>
-  </section>
+    <section class="card">
+      <h2>Informations élève</h2>
+      <div class="row">
+        <div>
+          <label for="nom">Nom</label>
+          <input id="nom" type="text" autocomplete="family-name" placeholder="Martin">
+        </div>
+        <div>
+          <label for="prenom">Prénom</label>
+          <input id="prenom" type="text" autocomplete="given-name" placeholder="Julie">
+        </div>
+      </div>
+      <div class="row">
+        <div>
+          <label for="classe">Classe</label>
+          <input id="classe" type="text" placeholder="2nde 4">
+        </div>
+        <div>
+          <label for="sexe">Sexe</label>
+          <select id="sexe">
+            <option value="">—</option>
+            <option value="fille">Fille</option>
+            <option value="garcon">Garçon</option>
+            <option value="autre">Autre</option>
+          </select>
+        </div>
+      </div>
+      <p class="muted">Ces infos serviront au QR JSON (compatibles ScanProf).</p>
+      <button id="save-eleve" class="btn">💾 Enregistrer l’élève</button>
+    </section>
 
-  <section class="card panel hc-emerald centered">
-    <h2>Choisir un mode</h2>
-    <div class="mode-buttons center-grid">
-      <button class="btn btn-blue" onclick="go('intervalles')">Temps intermédiaire</button>
-      <button class="btn btn-green" onclick="go('simple')">Chrono</button>
-      <button class="btn btn-emerald" onclick="go('minuteurSimple')">Minuteur</button>
-      <button class="btn btn-purple" onclick="go('simpleDistance')">Chrono avec calcul de vitesse</button>
-      <button class="btn btn-amber" onclick="go('tours')">Minuteur avec distance</button>
-    </div>
-  </section>
+    <section class="card">
+      <h2>Choisir un mode</h2>
+      <div class="grid">
+        <a class="btn btn-primary btn-wide go" data-mode="intermediaire">Temps intermédiaire</a>
+        <a class="btn btn-wide go" data-mode="chrono">Chrono</a>
+        <a class="btn btn-wide go" data-mode="minuteur">Minuteur</a>
+        <a class="btn btn-wide go" data-mode="chrono_vitesse">Chrono avec calcul de vitesse</a>
+        <a class="btn btn-wide go" data-mode="minuteur_distance">Minuteur avec distance</a>
+      </div>
+    </section>
 
-  <section class="card panel hc-pink centered">
-    <h2>Tests d'endurance</h2>
-    <div class="mode-buttons center-grid">
-      <button class="btn btn-pink" onclick="go('demiCooper')">Demi-Cooper (6′)</button>
-      <button class="btn btn-pink" onclick="go('cooper')">Cooper (12′)</button>
-    </div>
-  </section>
-</main>
-<footer class="footer">RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</footer>
-</body></html>
+    <section class="card">
+      <h2>Tests d’endurance</h2>
+      <div class="grid">
+        <a class="btn btn-primary btn-wide go" data-mode="demi_cooper">Demi-Cooper (6′)</a>
+        <a class="btn btn-primary btn-wide go" data-mode="cooper">Cooper (12′)</a>
+      </div>
+    </section>
+
+    <footer class="muted">
+      RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG - JB
+    </footer>
+  </div>
+
+  <script>
+    function getEleve() {
+      try { const raw = localStorage.getItem('eleve'); if (raw) return JSON.parse(raw); } catch {}
+      return { nom:"", prenom:"", classe:"", sexe:"" };
+    }
+    function setEleve(e) { try { localStorage.setItem('eleve', JSON.stringify(e)); } catch {} }
+    function loadForm() {
+      const e = getEleve();
+      if (!e) return;
+      if (e.nom) document.getElementById('nom').value = e.nom;
+      if (e.prenom) document.getElementById('prenom').value = e.prenom;
+      if (e.classe) document.getElementById('classe').value = e.classe;
+      if (e.sexe) document.getElementById('sexe').value = e.sexe;
+    }
+    function readForm() {
+      return {
+        nom: document.getElementById('nom').value.trim(),
+        prenom: document.getElementById('prenom').value.trim(),
+        classe: document.getElementById('classe').value.trim(),
+        sexe: document.getElementById('sexe').value.trim().toLowerCase()
+      };
+    }
+
+    document.addEventListener('DOMContentLoaded', () => {
+      loadForm();
+
+      document.getElementById('save-eleve').addEventListener('click', () => {
+        setEleve(readForm());
+        alert('Élève enregistré ✅');
+      });
+
+      document.querySelectorAll('a.go').forEach(a => {
+        a.addEventListener('click', (ev) => {
+          ev.preventDefault();
+          setEleve(readForm());
+          const mode = a.getAttribute('data-mode');
+          window.location.href = `mode.html?mode=${encodeURIComponent(mode)}`;
+        });
+      });
+    });
+  </script>
+</body>
+</html>
